# rtsp-h264-recorder

./: .gitignore  CMakeLists.txt  README.md
cmake/: dependencies.cmake  find_ffmpeg.cmake  utils.cmake
examples/: CMakeLists.txt
examples/example1/: CMakeLists.txt  main.cc  writer.cc  writer.h
vr/: CMakeLists.txt
vr/recorder/: CMakeLists.txt  storage.cc  storage.h  tape.cc  tape.h
vr/streamer/: CMakeLists.txt  streamer.cc  streamer.h
vr/utility/: CMakeLists.txt  handy.cc  handy.h
vr/video/: CMakeLists.txt  cam_reader.h
vr/video/ffmpeg/: rtsp_reader.cc  rtsp_reader.h
